Fix/challenge (#23)
* fix: success 코드 수정

* fix: API 실행 확인